- Fix wxJoystick::GetProductName() returning nothing (Maarten Bent, #23172).
- Work around MSVS 2022 optimizer bug in wxImage::ShrinkBy() (#23164).
- Fix link error with wxSimplebook in DLL builds (Mark Roszko, #22805).
- Avoid errors when including wx/msw/msvcrt.h before other wx headers (#23194).

wxOSX:

- Fix possible crash in menu item event handling (#23040).
- Generate wxEVT_DATAVIEW_COLUMN_HEADER_RIGHT_CLICK (#22833).
- Fix wxDataViewCtrl::HitTest() (Vojtěch Bubník, #22789).
- Fix position of the controls in wxStaticBox after resizing it (#22837).
- Ensure that "Window" menu is inserted before "Help" (#22871).
- Fix compiling with Xcode 7.3 and macOS 11 SDK (crazbot, #22988).
- Always call wxTaskBarIcon::GetPopupMenu() (William Lindnilsson, #23008).
- Fix scaling wxTaskBarIcon in high DPI (William Lindnilsson, #23042).
- Add margins around wxListCtrl items to improve appearance (#23155).
- Fix shortcuts handling in wxWebView (#23151).

wxQt:

- Fix creating wxFont using fractional point size (Ali Kettab, #23163).


3.2.1: (released 2022-09-09)
----------------------------

All (GUI):

- Add wxFileDialog::AddShortcut() (#22543).
- Fix grid window scrollbars when freezing part of the grid (#22602).
- Avoid warnings with wxStaticText flags in C++20 (David Connet, #22656).
- Fix AUI floating pane position when dragging (Konstantin S. Matveyev, #22533).
- Add wxStyledTextCtrl support to XRC schema file.
- Fix script parsing in wxLocaleIdent (Ulrich Telle).
- Make generic wxListCtrl separator lines more visible in dark themes (#22664).

wxGTK:

- Fix crash with wxNotebook and g_log_set_writer_func() in glib 2.73+ (#22717).
- Fix editors not appearing in wxGrid in some rare circumstances (#22628).
- Ignore attempts to draw circles with zero radius again (#22775).
- Fix build with --disable-intl (#22626).
- Fix build under MSW (Tim Stahlhut, #22633).
- Fix CMake build under NetBSD (Thomas Klausner, #22643, #22644, #22645).