@@ -303,6 +303,7 @@ wxMSW:
 wxOSX:
 
 - Fix possible crash in menu item event handling (#23040).
+- Fix regression in text drawing when using clipping (#22629).
 - Generate wxEVT_DATAVIEW_COLUMN_HEADER_RIGHT_CLICK (#22833).
 - Fix wxDataViewCtrl::HitTest() (Vojtěch Bubník, #22789).
 - Fix position of the controls in wxStaticBox after resizing it (#22837).
